clusters/production/homeapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeapi
  namespace: production
spec:
  type: NodePort
  selector:
    app: homeapi
  ports:
  - port: 80
    targetPort: 8082
    nodePort: 31002
